--- a/index.html
+++ b/index.html
@@ -7,11 +7,17 @@
     <title>A-Tech Services</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- Font Awesome Icons -->
 </head>
 
 <body>
+
+    <div class="loader_bg">
+   <div class="loader"><img src="img/loading.gif" alt="#" /></div>
+   <h1>PAGINA EN CREACION</h1>
+</div>
     <!--html DEL HEADER-->
     <header>
         <div class="header-content">
@@ -166,6 +172,10 @@
     <footer class="footer">
         <p>&copy; 2024 Alan-Tech Services. Derechos reservados.</p>
     </footer>
+
+    <script src="js/jquery.min.js"></script>
+     
+    <script src="js/custom.js"></script>
 
     <script src="js/scripts.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
